--- a/homePage/index.html
+++ b/homePage/index.html
@@ -38,26 +38,25 @@
     <header>
       <div class="text-container">
         <div class="background-image">
-          <h1 id="top">Nutrition & Catering</h1>
+          <h1 id="top">Nutricione, Dieta & Katering</h1>
           <h1 id="top1">
-            Welcome to DietShop, your one-stop destination for all your
-            nutrition and catering needs.
+            "Miresevini në DietShop, destinacioni juaj i vetëm për të gjitha nevojat tuaja në nutricion dhe katering ."
           </h1>
         </div>
       </div>
     </header>
     <hr />
-    <div id="row1">Welcome to DietShop - Here ARE WHAT WE CAN OFFER YOU!</div>
+    <div id="row1">Jemi këtu për të mbështetur rrugën tuaj drejt suksesit të përsosur në SHENDET DHE MIREQENIE!</div>
 
     <div class="wrap wrap--1">
       <div class="container container--1">
-        <h2>Nutrition Plan</h2>
+        <h2>Plani i Nutricioneve</h2>
         <p>
-          Get personalized nutrition plans tailored to your dietary needs. Click
-          the button below to view more.
+          Merrni plane të ushqimit të personalizuara të përshtatura sipas nevojave tuaja ushqimore.
+          Klikoni në butonin më poshtë për të parë më shumë.
         </p>
         <button class="btn" onclick="goToNutrition()" id="viewMoreBtn">
-          View More
+          Shiko me shume
         </button>
       </div>
     </div>
@@ -70,13 +69,13 @@
 
     <div class="wrap wrap--2">
       <div class="container container--2">
-        <h2>Diet Plan</h2>
+        <h2>Plani i Dietave</h2>
         <p>
-          Receive custom diet plans designed to help you achieve your fitness
-          goals. Click the button below to view more.
+          Merrni plane të personalizuara të ushqimit të dizajnuar për të ju ndihmuar të arrini qëllimet tuaja të formës fizike.
+          Klikoni në butonin më poshtë për të parë më shumë.
         </p>
         <button class="btn" onclick="goToSemundjet()" id="viewMoreBtn2">
-          View More
+          Shiko me shume
         </button>
       </div>
     </div>
@@ -89,13 +88,14 @@
 
     <div class="wrap wrap--3">
       <div class="container container--3">
-        <h2>Catering Plan</h2>
+        <h2>Plani i Kateringut</h2>
         <p>
-          Enjoy weekly catering services delivering delicious and nutritious
-          meals to your doorstep. Click the button below to view more.
+          Shijoni shërbimet javore të furnizimit që sjellin vakte të shijshme dhe me vlera ushqyese në derën tuaj.
+          Klikoni në butonin më poshtë për të parë më shumë.
+
         </p>
         <button class="btn" onclick="goToCatering()" id="viewMoreBtn3">
-          View More
+          Shiko me shume
         </button>
       </div>
     </div>
@@ -130,7 +130,7 @@
                       />
                     </a>
                     <div class="label-top-sub shadow-sm">
-                      <a class="text-white">SALE</a>
+                      <a class="text-white">SHITJE</a>
                     </div>
                     <div class="card-body-sub">
                       <div class="clearfix mb-3">
@@ -151,7 +151,7 @@
                         >
                       </div>
                       <h5 class="card-title-sub">
-                        <a href="#" target="_blank">Gain Weight Plan</a>
+                        <a href="#" target="_blank">Plani për Shtim në Peshë</a>
                       </h5>
                       <div class="d-grid gap-2 my-4">
                         <a class="btn-sub btn-warning-sub bold-btn-sub" href="#"
@@ -192,7 +192,7 @@
                         >
                       </div>
                       <h5 class="card-title-sub">
-                        <a href="#" target="_blank">Custom Meal Plan</a>
+                        <a href="#" target="_blank">Plan i Personalizuar i Vakteve</a>
                       </h5>
                       <div class="d-grid gap-2 my-4">
                         <a class="btn-sub btn-warning-sub bold-btn-sub" href="#"
@@ -319,13 +319,13 @@
     <hr />
     <footer class="detailed-footer">
       <div class="footer-info">
-        <h3>Contact Information</h3>
+        <h3>Informacioni mbi Kontaktin</h3>
         <p>Email: info@dietshop.com</p>
-        <p>Phone: +1 (555) 123-4567</p>
-        <p>Address: 123 Main Street, City, Country</p>
+        <p>Telefoni: +1 (555) 123-4567</p>
+        <p>Adresa: Rruga Kryesore 123, Qyteti, Shteti</p>
       </div>
       <div class="footer-social">
-        <h3>Follow Us</h3>
+        <h3>Na Ndiqni</h3>
         <ul>
           <li><a href="#">Facebook</a></li>
           <li><a href="#">Twitter</a></li>
@@ -333,7 +333,7 @@
         </ul>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 DietShop. All Rights Reserved.</p>
+        <p>&copy; 2024 DietShop. Të gjitha të drejtat e rezervuara.</p>
       </div>
     </footer>
      <script src="script.js"></script> 
