--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -446,10 +446,10 @@
 <!--footeri-->
 <footer class="detailed-footer">
   <div class="footer-info">
-      <h3>Contact Information</h3>
+      <h3>Informacion mbi Kontaktin</h3>
       <p>Email: info@dietshop.com</p>
       <p>Phone: +1 (555) 123-4567</p>
-      <p>Address: 123 Main Street, City, Country</p>
+      <p>Addresa: Rruga Kryesore 123, Qyteti, Shteti</p>
   </div>
   <div class="footer-social">
       <h3>Follow Us</h3>
@@ -460,7 +460,7 @@
       </ul>
   </div>
   <div class="footer-bottom">
-      <p>&copy; 2024 DietShop. All Rights Reserved.</p>
+      <p>&copy; 2024 DietShop. Te gjitha te Drejtat e Rezervuara.</p>
   </div>
 </footer>
 <script src="js.js"></script> <!--lidhja e javascript me html-->
