--- a/contact/contact.html
+++ b/contact/contact.html
@@ -236,23 +236,23 @@
 <hr>
 <footer class="detailed-footer">
     <div class="footer-info">
-        <h3>Contact Information</h3>
-        <p>Email: info@dietshop.com</p>
-        <p>Phone: +1 (555) 123-4567</p>
-        <p>Address: 123 Main Street, City, Country</p>
+      <h3>Informacioni mbi Kontaktin</h3>
+      <p>Email: info@dietshop.com</p>
+      <p>Telefoni: +1 (555) 123-4567</p>
+      <p>Adresa: Rruga Kryesore 123, Qyteti, Shteti</p>
     </div>
     <div class="footer-social">
-        <h3>Follow Us</h3>
-        <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-        </ul>
+      <h3>Na Ndiqni</h3>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 DietShop. All Rights Reserved.</p>
+      <p>&copy; 2024 DietShop. Të gjitha të drejtat e rezervuara.</p>
     </div>
-</footer>
+  </footer>
 <script src="stript.js"></script>
 </body>
 
