--- a/aboutAs/aboutAs.html
+++ b/aboutAs/aboutAs.html
@@ -28,7 +28,7 @@
     <a class="btn1" href="../logIn/logIIn.html">Log In</a>
 </nav>
 <div class="about-content wide">
-    <h2>Our Story</h2>
+    <h2>Historia jone</h2>
     <p>Mirë se vini në DietShop, një destinacion ku udhëtimi ynë fillon me një ide të thjeshtë:
          të ofrojmë individëve mjetet dhe burimet për të bërë jetë më të shëndetshme nëpërmjet të 
          ushqyerit të duhur. </p>
@@ -105,12 +105,9 @@
                 <p>"Faleminderit per këshillat e vlefshme për të mbajtur një dietë të balancuar."</p>
                 <p class="testimonial-author">- Megi Grenazi</p>
             </div>
-            <!-- Add more testimonials here -->
+            
         </div>
-        <!--        <div class="carousel-buttons">-->
-        <!--            <button id="prevBtn" onclick="moveTestimonials(-)">&lt;</button>-->
-        <!--            <button id="nextBtn" onclick="moveTestimonials(1)">&gt;</button>-->
-        <!--        </div>-->
+       >
     </div>
 </div>
 
