--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <main>
+    <!-- Atributet e navbar, si dhe fuksionaliteti per tu lidhur me filet perkatese  -->
     <nav id="navbar">
         <ul id="navcontent">
             <li><a href="../homePage/index.html">Home</a></li>
@@ -20,14 +21,16 @@
                     <a href="../Nutricion/border.html">Nutricione</a>
                     <a href="../semundjet/1.html">Dieta</a>
                     <a href="../catering/catering.html">Katering</a>
-                  </div></li>
+                  </div>
+            </li>
             <li><a href="../contact/contact.html">Contact Us</a></li>
         </ul>
         <a href="../logIn/logIIn.html" class="btn1">Log In</a>
     </nav>
 
+    <!--Buton per te lehtesuar perdorimin e web browserit (editimin ne js )-->
     <button title="Go to top" class="top-button" ><a href="#top" class="top-link">Shko siper</a></button>
-
+    <!--Kontenti-->
     <div  class="the-content">
     <h2 id="top">Nutricionet!</h2>
     <p >Nutricionet jane esenciale per rritjen, zhvillimin dhe mirëqenien e trupit. Ato jane substancat ushqyese qe organizmi i njeriut i nevojitet per te funksionuar ne menyre te duhur. Nutricionet jane karbohidrate, proteina, yndyra, vitamina, minerale dhe uje.
@@ -35,34 +38,33 @@
     </div>
 
 
-
     <div class="card" >
         <div class="container" >
-            <h4><a href="#femij" >Fëmijët e Rritur dhe Adoleshentët</a></h4>
+            <h4><a href="#femij" >Fëmijët e Rritur dhe Adoleshentët</a></h4> <!--kontenti ben lidhjen me dieten permes href-->
             <p>12-18</p>
         </div>
     </div>
     <div class="card">
         <div class="container" >
-            <h4><a href="#19-40">Të Rriturit</a></h4>
+            <h4><a href="#19-40">Të Rriturit</a></h4>   <!--kontenti ben lidhjen me dieten permes href-->
             <p>19-50</p>
         </div>
     </div>
     <div class="card">
         <div class="container">
-            <h4><a href="#mosha">Mosha e Mesme dhe Mosha e Mëvonshme</a></h4>
+            <h4><a href="#mosha">Mosha e Mesme dhe Mosha e Mëvonshme</a></h4>  <!--kontenti ben lidhjen me dieten permes href-->
             <p> 50+ </p>
         </div>
     </div>
     <div class="card">
         <div class="container">
-            <h4><a href="#vlera"> Vlerat ushqyese </a></h4>
+            <h4><a href="#vlera"> Vlerat ushqyese </a></h4>   <!--kontenti ben lidhjen me nutricionet permes href-->
             <p>Fruta dhe Perime</p>
         </div>
     </div>
 </main>
 <div class="day">
-    <p class="container" id="femij" >Fëmijët e Rritur dhe Adoleshentët (12-18)</p>
+    <p class="container" id="femij" >Fëmijët e Rritur dhe Adoleshentët (12-18)</p>  <!--Dieta ditore-->
     <ul class="days" >
         <li><a href="#dita1" >E Hene</a></li>
         <li><a href="#dita2">E Marte</a></li>
@@ -139,7 +141,7 @@
 
 
 <div class="day">
-    <p class="container" id="19-40">Të Rriturit (19-50 vjeç)</p>
+    <p class="container" id="19-40">Të Rriturit (19-50 vjeç)</p>   <!--Dieta ditore-->
     <ul class="days" >
         <li><a href="#mosha19_40dita1" >E Hene</a></li>
         <li><a href="#mosha19_40dita2">E Marte</a></li>
@@ -204,7 +206,7 @@
 
 
 <div class="day">
-    <p class="container" id="mosha">Mosha e Mesme dhe Mosha e Mëvonshme (50+) </p>
+    <p class="container" id="mosha">Mosha e Mesme dhe Mosha e Mëvonshme (50+) </p>  <!--Dieta ditore-->
     <ul class="days" >
         <li><a href="#mosha50_plus_dita1" >E Hene</a></li>
         <li><a href="#mosha50_plus_dita2">E Marte</a></li>
@@ -269,7 +271,7 @@
 
 
 <div class="day">
-    <p class="container" id="vlera">Vlerat Ushqyese</p>
+    <p class="container" id="vlera">Vlerat Ushqyese</p>  <!--Dieta ditore-->
     <ul class="days" >
         <li><a href="#Fruta" >Fruta </a></li>
         <li><a href="#Perime">Perime</a></li>
@@ -395,9 +397,9 @@
                 </div>
           </div>
 </section>
-    <!-- Shto më shumë seksione për ditët e tjera -->
 
 </main>
+
 
 <hr>
 <footer class="detailed-footer">
